# igris_c_description_public

./: .gitignore  CMakeLists.txt  README.md  package.xml  pixi.toml  ruff.toml  taskfile.yml
launch/: display_urdf_with_gui.launch.py  visualize.launch.py
mujoco/: igris_c_lowerarm_module.xml.xacro  igris_c_v2.xml  igris_c_v2.xml.xacro  igris_c_v2_1dof_gripper.xml  igris_c_v2_fixed.xml  igris_c_v2_hand.xml  igris_c_v2_original.xml  igris_c_v2_parallel.xml  igris_c_v2_parallel_1dof_gripper.xml  igris_c_v2_parallel_collision.xml  igris_c_v2_parallel_fixed.xml  igris_c_v2_parallel_hand.xml  igris_c_v2_parallel_toe.xml  igris_c_v2_pelvis_base.xml  igris_c_v2_pelvis_base_1dof_gripper.xml  igris_c_v2_pelvis_base_fixed.xml  igris_c_v2_pelvis_base_hand.xml  igris_c_v2_pelvis_base_parallel.xml  igris_c_v2_pelvis_base_parallel_1dof_gripper.xml  igris_c_v2_pelvis_base_parallel_fixed.xml  igris_c_v2_pelvis_base_parallel_hand.xml  igris_c_v2_with_hand.xml  igris_c_v3.xml  igris_c_v3_parallel.xml
rviz/: urdf.rviz
scripts/: export_model.py  imu_tf_broadcaster.py  joint_state_remap.py  mujoco_file_test.py  mujoco_minimal.py
urdf/: end_effector.xacro  igris_c_lowerarm_module.urdf.xacro  igris_c_v2 original.urdf  igris_c_v2.urdf  igris_c_v2.urdf.xacro  igris_c_v2_1dof_gripper.urdf  igris_c_v2_hand.urdf  igris_c_v2_parallel.urdf  igris_c_v2_parallel.urdf.xacro  igris_c_v2_parallel_1dof_gripper.urdf  igris_c_v2_parallel_hand.urdf  igris_c_v2_parallel_left_ankle.urdf  igris_c_v2_parallel_left_wrist.urdf  igris_c_v2_parallel_links.urdf.xacro  igris_c_v2_parallel_right_ankle.urdf  (+18 more)
(+29 files in other folders)
